--- a/Sheaft.Web.Manage/Views/Transfers/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Transfers/Edit.cshtml
@@ -40,7 +40,7 @@
         <h4>Operation</h4>
         <div class="form-group">
             @Html.LabelFor(m => m.Status)
-            @Html.TextBoxFor(m => m.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.TextBoxFor(m => m.Status, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.ExecutedOn)
@@ -64,12 +64,12 @@
             @Html.TextBoxFor(m => m.PurchaseOrder.TotalOnSalePrice, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.PurchaseOrder.Status.ToString("G"))
-            @Html.TextBoxFor(m => m.PurchaseOrder.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.PurchaseOrder.Status)
+            @Html.TextBoxFor(m => m.PurchaseOrder.Status, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <h4>Purchase Order</h4>
         <div class="form-group">
-            <a asp-controller="Orders" asp-action="Edit" asp-route-id="@Model.PurchaseOrder.Id" class="btn btn-info">
+            <a asp-controller="PurchaseOrders" asp-action="Edit" asp-route-id="@Model.PurchaseOrder.Id" class="btn btn-info">
                 Related Purchase Order
             </a>
         </div>
