--- a/Sheaft.Web.Manage/Views/Consumers/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Consumers/Edit.cshtml
@@ -4,7 +4,28 @@
 }
 
 <div class="container">
-    <h2 class="display-4">Consumer details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+    <h2 class="display-4 d-inline">Consumer details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+    <div class="d-inline">
+        @if (!Model.RemovedOn.HasValue)
+        {
+            @using (Html.BeginForm("Delete", "Consumers", new { id = Model.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+            {
+                <button type="submit" class="btn btn-danger">
+                    <i class="fa fa-trash"></i>
+                </button>
+            }
+        }
+        else
+        {
+            @using (Html.BeginForm("Restore", "Consumers", new { id = Model.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+            {
+                <button type="submit" class="btn btn-info">
+                    <i class="fa fa-trash-restore"></i>
+                </button>
+            }
+        }
+    </div>
+    <div class="clearfix"></div>
     <br />
 
     @using (Html.BeginForm("Edit", "Consumers", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
