--- a/Sheaft.Web.Manage/Views/Jobs/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Jobs/Index.cshtml
@@ -48,37 +48,21 @@
                     <td>@entity.Archived</td>
                     @if (!imperonatingId.HasValue)
                     {
-                        <td>@entity.User.Name</td>
-                        @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.User.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                        {
-                            <button type="submit" class="btn btn-info">
-                                <i class="fa fa-user-secret"></i>
-                            </button>
-                        }
+                <td>
+                    @entity.User.Name 
+                    
+                    @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.User.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                    {
+                        <button type="submit" class="btn btn-info">
+                            <i class="fa fa-user-secret"></i>
+                        </button>
+                    }
+                </td>                        
                     }
                     <td>
                         <a asp-controller="Jobs" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
                             <i class="fa fa-pen"></i>
                         </a>
-
-                        @if (entity.RemovedOn.HasValue)
-                        {
-                            @using (Html.BeginForm("Restore", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                            {
-                                <button type="submit" class="btn btn-success">
-                                    <i class="fa fa-trash-restore"></i>
-                                </button>
-                            }
-                        }
-                        else
-                        {
-                            @using (Html.BeginForm("Delete", "Jobs", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                            {
-                                <button type="submit" class="btn btn-danger">
-                                    <i class="fa fa-trash"></i>
-                                </button>
-                            }
-                        }
                     </td>
                 </tr>
             }
