--- a/Sheaft.Web.Manage/Views/Tags/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Tags/Edit.cshtml
@@ -13,6 +13,27 @@
 
 <div class="container">
     <h2 class="display-4">Tag details @(Model.RemovedOn.HasValue ? "(removed)":"")</h2>
+    <div class="d-inline">
+        @if (!Model.RemovedOn.HasValue)
+        {
+            @using (Html.BeginForm("Delete", "Tags", new { id = Model.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+            {
+                <button type="submit" class="btn btn-danger">
+                    <i class="fa fa-trash"></i>
+                </button>
+            }
+        }
+        else
+        {
+            @using (Html.BeginForm("Restore", "Tags", new { id = Model.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+            {
+                <button type="submit" class="btn btn-info">
+                    <i class="fa fa-trash-restore"></i>
+                </button>
+            }
+        }
+    </div>
+    <div class="clearfix"></div>
     <br />
 
     @using (Html.BeginForm("Edit", "Tags", FormMethod.Post, new { @class = "form", enctype = "multipart/form-data" }))
