--- a/Sheaft.Web.Manage/Views/Withholdings/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Withholdings/Edit.cshtml
@@ -31,7 +31,7 @@
         <h4>Operation</h4>
         <div class="form-group">
             @Html.LabelFor(m => m.Status)
-            @Html.TextBoxFor(m => m.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.TextBoxFor(m => m.Status, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
             @Html.LabelFor(m => m.ExecutedOn)
@@ -51,8 +51,8 @@
             @Html.TextBoxFor(m => m.Payout.Identifier, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
-            @Html.LabelFor(m => m.Payout.Status.ToString("G"))
-            @Html.TextBoxFor(m => m.Payout.Status.ToString("G"), null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.Payout.Status)
+            @Html.TextBoxFor(m => m.Payout.Status, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <div class="form-group">
             <a asp-controller="Payouts" asp-action="Edit" asp-route-id="@Model.Payout.Id" class="btn btn-info">
