Revert - Remise en place de l'édition produit sur manage

--- a/Sheaft.Web.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Products/Edit.cshtml
@@ -142,6 +142,14 @@
             @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
             @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
         </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.VisibleToStores, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.VisibleToStores, new { @class = "form-check-label" })
+        </div>
+        <div class="form-check">
+            @Html.CheckBoxFor(m => m.VisibleToConsumers, new { @class = "form-check-input" })
+            @Html.LabelFor(m => m.VisibleToConsumers, new { @class = "form-check-label" })
+        </div>
         <div class="form-group">
             @Html.LabelFor(m => m.CreatedOn)
             @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
