New - Modification de la création / gestion des agreements (rattaché à une delivery)

--- a/Sheaft.Web.Manage/Views/Agreements/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Agreements/Edit.cshtml
@@ -96,8 +96,8 @@
         }
         <h4>Producer</h4>
         <div class="form-group">
-            @Html.LabelFor(m => m.Delivery.Producer.Name)
-            @Html.TextBoxFor(m => m.Delivery.Producer.Name, null, new { @class = "form-control", @disabled = "disabled" })
+            @Html.LabelFor(m => m.Producer.Name)
+            @Html.TextBoxFor(m => m.Producer.Name, null, new { @class = "form-control", @disabled = "disabled" })
         </div>
         <h4>Store</h4>
         <div class="form-group">
