Update - Refonte de l'email envoyé pour confirmation de commande

--- a/Sheaft.Application/Mailings/Templates/OrderRefusedEvent.cshtml
+++ b/Sheaft.Application/Mailings/Templates/OrderRefusedEvent.cshtml
@@ -158,7 +158,7 @@
                                                                     <tr>
                                                                         <td style="padding:18px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                             <div>
-                                                                                <div style="font-family: inherit; text-align: center">Le paiement pour votre commande de @(Model.TotalPrice)€ a échoué.</div>
+                                                                                <div style="font-family: inherit; text-align: center">Le paiement de votre commande de @(Model.TotalPrice)€ a échoué.</div>
                                                                                 <div style="font-family: inherit; text-align: center"><br /></div>
                                                                                 <div style="font-family: inherit; text-align: center">Vous pouvez voir le détail en cliquant sur le bouton ci-dessous.</div><div></div>
                                                                             </div>
