--- a/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryReceipt.cshtml
@@ -39,29 +39,6 @@
     <strong>@Model.Producer.Name</strong><br/>
     @Model.Producer.Email<br/>
     @Model.Producer.Phone<br/>
-    @Model.Producer.Siret<br/>
-
-    @Model.Producer.Address.Line1<br/>
-    @if (!string.IsNullOrWhiteSpace(@Model.Producer.Address.Line2))
-    {
-        @Model.Producer.Address.Line2<br/>
-    }
-    @Model.Producer.Address.Zipcode<br/>
-    @Model.Producer.Address.City<br/>
-</div>
-<div style="text-align: right;">
-    <strong>@Model.Client.Name</strong><br/>
-    @Model.Client.Email<br/>
-    @Model.Client.Phone<br/>
-    @Model.Client.Siret<br/>
-
-    @Model.Client.Address.Line1<br/>
-    @if (!string.IsNullOrWhiteSpace(@Model.Client.Address.Line2))
-    {
-        @Model.Client.Address.Line2<br/>
-    }
-    @Model.Client.Address.Zipcode<br/>
-    @Model.Client.Address.City<br/>
 </div>
 </div>
 <div style="padding:15px 0px">
@@ -71,31 +48,36 @@
     <thead>
     <tr style="background-color: #009688;color: #ffffff;text-align: left;">
         <th style="padding: 12px 15px;">Produit</th>
-        <th style="padding: 12px 15px;text-align: center;">Quantité</th>
+        <th style="padding: 12px 15px;text-align: center;">Quantité envoyée</th>
+        <th style="padding: 12px 15px;text-align: center;">Quantité reçue</th>
     </tr>
     </thead>
     <tbody>
     @foreach (var item in Model.PurchaseOrders)
     {
     <tr style="text-align: left;">
-            <th colspan="2" style="padding:15px 5px;">Commande @item.Reference du @item.CreatedOn.ToString("dd/MM/yyyy")</th>
+            <th colspan="3" style="padding:15px 5px;">Commande @item.Reference du @item.CreatedOn.ToString("dd/MM/yyyy")</th>
         </tr>
         @foreach (var product in item.Products)
         {
             <tr >
                 <td style="padding: 10px 15px;vertical-align: center;">@product.Name</td>
                 <td style="padding: 10px 15px;vertical-align: center; text-align: right;">@product.Quantity</td>
+                <td style="padding: 10px 15px;vertical-align: center; text-align: right;"></td>
             </tr>
         }
     }
     <tr style="border:none;">
-        <td colspan="2" style="border:none;padding: 10px;"></td>
+        <td colspan="3" style="border:none;padding: 10px;"></td>
     </tr>
     <tr style="border:none;">
-        <td colspan="2" style="border:none; padding:10px 0px;"><strong>Remarques :</strong></td>
+        <td colspan="3" style="border:none; padding:10px 0px;">Réceptionnée par :</td>
+    </tr>
+    <tr style="border:none;">
+        <td colspan="3" style="border:none; padding:10px 0px;"><strong>Remarques :</strong></td>
     </tr>
     <tr>
-        <td colspan="2"><div style="min-height: 100px;border: #dddddd solid 1px">@Model.Comment</div></td>
+        <td colspan="3"><div style="min-height: 100px;border: #dddddd solid 1px">@Model.Comment</div></td>
     </tr>
     </tbody>
 </table>
