New - Ajout d'un status Ready pour les deliveryBatches et modification des emails

--- a/Sheaft.Mailing/Templates/DeliveryBatchFormsGeneratedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryBatchFormsGeneratedEvent.cshtml
@@ -155,7 +155,7 @@
                                                             <tr>
                                                                 <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <h1 style="text-align: center">BONS DE LIVRAISONS</h1>
+                                                                        <h1 style="text-align: center">BONS DE LIVRAISON</h1>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -166,7 +166,8 @@
                                                             <tr>
                                                                 <td style="padding:0px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <p>Bonjour,</p>
+                                                                        <p>Bonjour @Model.Firstname,</p>
+                                                                        <br/>
                                                                         <p>Vos bons de livraison pour la tournée @Model.Name du @Model.ScheduledOn.ToString("dd/MM/yyyy") sont prêts. Vous pouvez les télécharger en cliquant sur le bouton ci-dessous.</p>
                                                                     </div>
                                                                 </td>
