--- a/Sheaft.Mailing/Templates/DeliveryForm.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryForm.cshtml
@@ -72,9 +72,9 @@
     <tr style="background-color: #009688;color: #ffffff;text-align: left;">
         <th style="padding: 12px 15px;">Produit</th>
         <th style="padding: 12px 15px;text-align: center;">Quantité</th>
-        <th style="padding: 12px 15px;text-align: center;">PU HT</th>
-        <th style="padding: 12px 15px;text-align: center;">TVA</th>
-        <th style="padding: 12px 15px;text-align: center;">Total HT</th>
+        <th style="padding: 12px 15px;text-align: center;">PU HT (€)</th>
+        <th style="padding: 12px 15px;text-align: center;">TVA (%)</th>
+        <th style="padding: 12px 15px;text-align: center;">Total HT (€)</th>
     </tr>
     </thead>
     <tbody>
