--- a/Sheaft.Mailing/Templates/DeliveryFormGeneratedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryFormGeneratedEvent.cshtml
@@ -166,7 +166,8 @@
                                                             <tr>
                                                                 <td style="padding:0px 0px 18px 0px; line-height:22px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <p>Bonjour,</p>
+                                                                        <p>Bonjour @Model.Firstname,</p>
+                                                                        <br/>
                                                                         <p>@Model.ProducerName à valider la livraison de votre commande le @Model.DeliveredOn.Value.ToString("dd/MM/yyyy"). Vous pouvez télécharger votre bon de livraison en cliquant sur le bouton ci-dessous.</p>
                                                                     </div>
                                                                 </td>
