--- a/Sheaft.Mailing/Templates/DeliveryBatchFormsCompletedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryBatchFormsCompletedEvent.cshtml
@@ -1,4 +1,4 @@
-﻿@model Sheaft.Mailing.DeliveryMailerModel
+﻿@model Sheaft.Mailing.DeliveryBatchMailerModel
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html data-editor-version="2" class="sg-campaigns" xmlns="http://www.w3.org/1999/xhtml">
@@ -128,7 +128,7 @@
                                                         <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                             <tr>
                                                                 <td role="module-content">
-                                                                    <p>Bon de réception @Model.ProducerName du @(Model.ScheduledOn.ToString("dd/MM/yyyy"))</p>
+                                                                    <p>Compte rendu @Model.Name du @(Model.ScheduledOn.ToString("dd/MM/yyyy"))</p>
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -155,7 +155,7 @@
                                                             <tr>
                                                                 <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <h1 style="text-align: center">VOTRE BON DE RECEPTION</h1>
+                                                                        <h1 style="text-align: center">COMPTE RENDU DE LIVRAISON</h1>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -168,7 +168,7 @@
                                                                     <div>
                                                                         <p>Bonjour @Model.Firstname,</p>
                                                                         <br/>
-                                                                        <p>@Model.ProducerName a prévu de vous livrer le @Model.ScheduledOn.ToString("dd/MM/yyyy"). Vous pouvez télécharger le bon de réception afin de vérifier avec lui les quantités lorsqu'il arrivera. Un email contenant le bon de livraison vous sera envoyé après validation de sa livraison.</p>
+                                                                        <p>Vos bons de livraison pour la tournée @Model.Name du @Model.ScheduledOn.ToString("dd/MM/yyyy") sont prêts. Vous pouvez les télécharger en cliquant sur le bouton ci-dessous.</p>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -183,7 +183,7 @@
                                                                         <tbody>
                                                                         <tr>
                                                                             <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Télécharger le bon de réception</a>
+                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Télécharger mes bons de livraisons</a>
                                                                                 <br/>
                                                                                 <br/>
                                                                             </td>
