--- a/Sheaft.Mailing/Templates/DeliveryPostponedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryPostponedEvent.cshtml
@@ -128,7 +128,7 @@
                                                         <table class="module preheader preheader-hide" role="module" data-type="preheader" border="0" cellpadding="0" cellspacing="0" width="100%" style="display: none !important; mso-hide: all; visibility: hidden; opacity: 0; color: transparent; height: 0; width: 0;">
                                                             <tr>
                                                                 <td role="module-content">
-                                                                    <p>Bon de réception @Model.ProducerName du @(Model.ScheduledOn.ToString("dd/MM/yyyy"))</p>
+                                                                    <p>@Model.ProducerName a décaler sa livraison au @(Model.ScheduledOn.ToString("dd/MM/yyyy"))</p>
                                                                 </td>
                                                             </tr>
                                                         </table>
@@ -155,7 +155,7 @@
                                                             <tr>
                                                                 <td style="padding:18px 0px 18px 0px; line-height:40px; text-align:inherit;" height="100%" valign="top" bgcolor="" role="module-content">
                                                                     <div>
-                                                                        <h1 style="text-align: center">VOTRE BON DE RECEPTION</h1>
+                                                                        <h1 style="text-align: center">LIVRAISON REPORTEE</h1>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -168,7 +168,7 @@
                                                                     <div>
                                                                         <p>Bonjour @Model.Firstname,</p>
                                                                         <br/>
-                                                                        <p>@Model.ProducerName a prévu de vous livrer le @Model.ScheduledOn.ToString("dd/MM/yyyy"). Vous pouvez télécharger le bon de réception afin de vérifier avec lui les quantités lorsqu'il arrivera. Un email contenant le bon de livraison vous sera envoyé après validation de sa livraison.</p>
+                                                                        <p>@Model.ProducerName a décalé sa livraison au @Model.ScheduledOn.ToString("dd/MM/yyyy"). Pour suivre l'avancement de votre livraison en cliquant sur le bouton ci-dessous.</p>
                                                                     </div>
                                                                 </td>
                                                             </tr>
@@ -183,7 +183,7 @@
                                                                         <tbody>
                                                                         <tr>
                                                                             <td align="center" bgcolor="#009688" class="inner-td" style="border-radius:6px; font-size:16px; text-align:center; background-color:inherit;">
-                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Télécharger le bon de réception</a>
+                                                                                <a href="@Model.Url" style="background-color:#009688; border:0px solid #333333; border-color:#333333; border-radius:36px; border-width:0px; color:#ffffff; display:inline-block; font-size:14px; font-weight:normal; letter-spacing:0px; line-height:normal; padding:12px 18px 12px 18px; text-align:center; text-decoration:none; border-style:solid;" target="_blank">Suivre l'avancement</a>
                                                                                 <br/>
                                                                                 <br/>
                                                                             </td>
