--- a/Sheaft.Mailing/Templates/DeliveryPostponedEvent.cshtml
+++ b/Sheaft.Mailing/Templates/DeliveryPostponedEvent.cshtml
@@ -168,7 +168,7 @@
                                                                     <div>
                                                                         <p>Bonjour @Model.Firstname,</p>
                                                                         <br/>
-                                                                        <p>@Model.ProducerName a décalé sa livraison au @Model.ScheduledOn.ToString("dd/MM/yyyy"). Pour suivre l'avancement de votre livraison en cliquant sur le bouton ci-dessous.</p>
+                                                                        <p>@Model.ProducerName a décalé sa livraison au @Model.ScheduledOn.ToString("dd/MM/yyyy").</p>
                                                                     </div>
                                                                 </td>
                                                             </tr>
